--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -1127,6 +1127,7 @@ body.dark-mode .evidence-grid .gallery-item {
   transform: translateY(-50%);
   gap: 2px; /* Space between icons */
   z-index: 1000;
+  background: grey;
 }
 
 .icon-bar a {
@@ -1142,6 +1143,7 @@ body.dark-mode .evidence-grid .gallery-item {
 .icon-bar a:hover {
   background-color: #000;
 }
+
 /*
 .instagram { background: #bc2bac; }
 .facebook  { background: #3B5998; }
@@ -1150,6 +1152,7 @@ body.dark-mode .evidence-grid .gallery-item {
 .youtube   { background: #bb1100; }
 .substack  { background: #ff6719; }
 */
+
 .icon-bar a.instagram,
 .icon-bar a.facebook,
 .icon-bar a.twitter,
@@ -1450,6 +1453,7 @@ body.light-mode .icon-bar a {
   .icon-bar a.youtube   { background: #bb1100; }
   .icon-bar a.substack  { background: #ff6719; }
 }
+
 
 
 
