--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -1380,6 +1380,10 @@ body.dark-mode footer, body.dark-mode .flex-container2 {
 }
 /* dark-mode icon-bar */
 
+body.dark-mode .icon-bar {
+   background-color: #1a1a1a 
+}
+
 body.dark-mode .icon-bar a {
   background-color: #222;
   color: #ddd;
@@ -1526,6 +1530,7 @@ body.light-mode .icon-bar a {
     transform: translateY(-15px); /* scroll upward subtly */
   }
 }
+
 
 
 
