Update style_resp.css iconnbar bg darkmode fix

--- a/css/style_resp.css
+++ b/css/style_resp.css
@@ -1381,7 +1381,7 @@ body.dark-mode footer, body.dark-mode .flex-container2 {
 /* dark-mode icon-bar */
 
 body.dark-mode .icon-bar {
-   background-color: #1a1a1a 
+   background-color: #1a1a1a  !important;
 }
 
 body.dark-mode .icon-bar a {
@@ -1530,6 +1530,7 @@ body.light-mode .icon-bar a {
     transform: translateY(-15px); /* scroll upward subtly */
   }
 }
+
 
 
 
